--- a/src/gui/i18n/locales/zh.json
+++ b/src/gui/i18n/locales/zh.json
@@ -5,6 +5,7 @@
     "nav.rename": "苗ID重命名",
     "nav.timeseries": "时间序列切块",
     "nav.annotate": "标注训练",
+    "nav.settings": "设置",
     
     "layer_panel.title": "图层",
     "layer_panel.add_tooltip": "添加图层",
@@ -92,6 +93,13 @@
     "page.anno.group.train": "模型训练",
     "page.anno.btn.train": "训练 YOLO",
     "page.anno.btn.switch": "切换模型",
+
+    "settings.group.model": "模型配置",
+    "settings.label.model_dir": "模型权重文件夹",
+    "settings.btn.browse": "浏览...",
+    "settings.group.general": "常规",
+    "settings.label.language": "语言",
+    "settings.msg.restart": "更改语言将在下次启动时生效。",
 
     "prop.group.numbering": "编号规则",
 
