fix(ui): lang & theme ui bug

--- a/src/gui/resource/i18n/en_US.json
+++ b/src/gui/resource/i18n/en_US.json
@@ -101,7 +101,7 @@
     "settings.desc.theme": "Application appearance",
     "settings.theme.auto": "Use System Setting",
     "settings.theme.light": "Light",
-    "settings.theme.dark": "Dark",
+    "settings.theme.dark": "Dark(Todo)",
     "settings.label.language": "Language",
     "settings.desc.language": "User Interface Language",
     "settings.lang.auto": "Use System Setting",
