feat(subplot_gen): can generate
1. 加载shp文件，地图上会出现红色边框
2. 能出现分割后的subplot，颜色为绿色
3. 能生成保存shp文件

--- a/src/gui/resource/i18n/en_US.json
+++ b/src/gui/resource/i18n/en_US.json
@@ -170,6 +170,16 @@
     "prop.label.annotated": "Annotated Images",
     "prop.label.model_status": "Model Status",
     
-    "prop.title": "Properties"
+    "prop.title": "Properties",
 
+    "error": "Error",
+    "warning": "Warning",
+    "success": "Success",
+
+    "page.subplot.dialog.load_image": "Load Background Image",
+    "page.subplot.dialog.load_boundary": "Load Plot Boundary Shapefile",
+    "page.subplot.dialog.save_shp": "Save Subplots",
+    "page.subplot.error.invalid_boundary": "Invalid boundary file! Please select a Shapefile containing exactly one Polygon.",
+    "page.subplot.warning.no_boundary": "Please load a boundary file first!",
+    "page.subplot.success.generated": "Subplots generated and saved successfully!"
 }
