--- a/src/gui/resource/i18n/ja_JP.json
+++ b/src/gui/resource/i18n/ja_JP.json
@@ -11,6 +11,7 @@
     "layer_panel.title": "レイヤー",
     "layer_panel.add_tooltip": "レイヤー追加",
     "layer_panel.remove_tooltip": "選択したレイヤーを削除",
+    "layer_panel.menu.add": "レイヤー追加",
     "layer_panel.menu.zoom": "レイヤーにズーム",
     "layer_panel.menu.delete": "削除",
     "layer_panel.confirm.delete.title": "レイヤー削除",
@@ -22,6 +23,10 @@
     "status.coord": "座標: X: {x:.2f}, Y: {y:.2f}",
     "status.zoom": "ズーム: {zoom:.0f}%",
     "status.rotation": "回転: {angle:.2f}°",
+
+    "error": "エラー",
+    "warning": "警告",
+    "success": "成功",
 
     "page.common.file": "ファイル",
     "page.common.save": "保存 SHP",
@@ -42,6 +47,13 @@
     "page.subplot.check.preview": "リアルタイム",
     "page.subplot.btn.focus": "フォーカス回転",
     "page.subplot.btn.generate": "生成・保存",
+
+    "page.subplot.dialog.load_image": "背景画像読込",
+    "page.subplot.dialog.load_boundary": "境界SHP読込",
+    "page.subplot.dialog.save_shp": "サブプロット保存",
+    "page.subplot.error.invalid_boundary": "境界ファイルが正しくありません！",
+    "page.subplot.warning.no_boundary": "境界ファイルを先に読込してください！",
+    "page.subplot.success.generated": "サブプロット生成と保存が完了しました！",
 
     "page.seedling.group.sam": "SAM3 検出",
     "page.seedling.label.prompt": "プロンプト:",
