--- a/src/gui/resource/i18n/en_US.json
+++ b/src/gui/resource/i18n/en_US.json
@@ -8,7 +8,6 @@
     "nav.annotate": "Annotation & Train",
     "nav.settings": "Settings",
     
-    
     "layer_panel.title": "Layers",
     "layer_panel.add_tooltip": "Add Layer",
     "layer_panel.remove_tooltip": "Remove Selected Layer",
@@ -20,8 +19,9 @@
     "layer_panel.rename.fail.title": "Rename Failed",
     "layer_panel.rename.fail.msg": "Name '{name}' already exists.",
 
-    "status.ready": "Ready",
     "status.coord": "Coord: X: {x:.2f}, Y: {y:.2f}",
+    "status.zoom_prefix": "Zoom: ",
+    "status.rotation_prefix": "Rotation: ",
     "status.zoom": "Zoom: {zoom:.0f}%",
     "status.rotation": "Rotation: {angle:.2f}°",
 
