--- a/src/gui/resource/i18n/ja_JP.json
+++ b/src/gui/resource/i18n/ja_JP.json
@@ -19,8 +19,9 @@
     "layer_panel.rename.fail.title": "名前変更失敗",
     "layer_panel.rename.fail.msg": "名前 '{name}' は既に存在します。",
 
-    "status.ready": "準備完了",
-    "status.coord": "座標: X: {x:.2f}, Y: {y:.2f}",
+    "status.coord": "座標: X:{x:.2f}, Y:{y:.2f}",
+    "status.zoom_prefix": "ズーム: ",
+    "status.rotation_prefix": "回転: ",
     "status.zoom": "ズーム: {zoom:.0f}%",
     "status.rotation": "回転: {angle:.2f}°",
 
