--- a/src/gui/resource/i18n/zh_CN.json
+++ b/src/gui/resource/i18n/zh_CN.json
@@ -19,8 +19,9 @@
     "layer_panel.rename.fail.title": "重命名失败",
     "layer_panel.rename.fail.msg": "名称 '{name}' 已存在。",
 
-    "status.ready": "就绪",
-    "status.coord": "坐标: X: {x:.2f}, Y: {y:.2f}",
+    "status.coord": "坐标: X:{x:.2f}, Y:{y:.2f}",
+    "status.zoom_prefix": "缩放: ",
+    "status.rotation_prefix": "旋转角度: ",
     "status.zoom": "缩放: {zoom:.0f}%",
     "status.rotation": "旋转角度: {angle:.2f}°",
 
