fix(ui): subplot top bar to property

--- a/src/gui/resource/i18n/en_US.json
+++ b/src/gui/resource/i18n/en_US.json
@@ -36,25 +36,27 @@
     "page.subplot.group.file": "File",
     "page.subplot.btn.load_image": "Load Image",
     "page.subplot.btn.load_boundary": "Load Boundary SHP",
-    "page.subplot.group.def": "Definition Mode",
+    "page.subplot.group.layout": "Layout Rules",
     "page.subplot.combo.rc": "By Row/Col",
     "page.subplot.combo.size": "By Size (m)",
-    "page.subplot.group.param": "Parameters",
-    "page.subplot.label.cols": "Cols/Width:",
-    "page.subplot.label.rows": "Rows/Height:",
+    "page.subplot.label.def_mode": "Definition Mode",
+    "page.subplot.label.cols": "Cols:",
+    "page.subplot.label.rows": "Rows:",
+    "page.subplot.label.width_m": "Width (m):",
+    "page.subplot.label.height_m": "Height (m):",
     "page.subplot.label.x_space": "X Spacing:",
     "page.subplot.label.y_space": "Y Spacing:",
-    "page.subplot.group.action": "Actions",
+    "page.subplot.group.view": "View",
     "page.subplot.check.preview": "Live Preview",
     "page.subplot.btn.focus": "Focus & Rotate",
-    "page.subplot.btn.generate": "Generate & Save",
+    "page.subplot.btn.reset": "Reset",
+    "page.subplot.btn.save": "Save SHP",
 
     "page.subplot.dialog.load_image": "Load Background Image",
     "page.subplot.dialog.load_boundary": "Load Plot Boundary Shapefile",
-    "page.subplot.dialog.save_shp": "Save Subplots",
     "page.subplot.error.invalid_boundary": "Invalid boundary file! Please select a Shapefile containing exactly one Polygon.",
     "page.subplot.warning.no_boundary": "Please load a boundary file first!",
-    "page.subplot.success.generated": "Subplots generated and saved successfully!",
+    "page.subplot.msg.success": "Subplots generated and saved successfully!",
 
     "page.seedling.group.sam": "SAM3 Detection",
     "page.seedling.label.prompt": "Prompt:",
