--- a/src/gui/resource/i18n/ja_JP.json
+++ b/src/gui/resource/i18n/ja_JP.json
@@ -36,25 +36,27 @@
     "page.subplot.group.file": "ファイル",
     "page.subplot.btn.load_image": "画像読込",
     "page.subplot.btn.load_boundary": "境界SHP読込",
-    "page.subplot.group.def": "定義モード",
+    "page.subplot.group.layout": "配置規則",
     "page.subplot.combo.rc": "行・列数",
     "page.subplot.combo.size": "サイズ(m)",
-    "page.subplot.group.param": "パラメータ",
-    "page.subplot.label.cols": "列数/幅:",
-    "page.subplot.label.rows": "行数/高さ:",
+    "page.subplot.label.def_mode": "定義モード",
+    "page.subplot.label.cols": "列数:",
+    "page.subplot.label.rows": "行数:",
+    "page.subplot.label.width_m": "幅(m):",
+    "page.subplot.label.height_m": "高さ(m):",
     "page.subplot.label.x_space": "X間隔:",
     "page.subplot.label.y_space": "Y間隔:",
-    "page.subplot.group.action": "操作",
+    "page.subplot.group.view": "表示",
     "page.subplot.check.preview": "リアルタイム",
     "page.subplot.btn.focus": "フォーカス回転",
-    "page.subplot.btn.generate": "生成・保存",
+    "page.subplot.btn.reset": "リセット",
+    "page.subplot.btn.save": "SHP保存",
 
     "page.subplot.dialog.load_image": "背景画像読込",
     "page.subplot.dialog.load_boundary": "境界SHP読込",
-    "page.subplot.dialog.save_shp": "サブプロット保存",
     "page.subplot.error.invalid_boundary": "境界ファイルが正しくありません！",
     "page.subplot.warning.no_boundary": "境界ファイルを先に読込してください！",
-    "page.subplot.success.generated": "サブプロット生成と保存が完了しました！",
+    "page.subplot.msg.success": "サブプロット生成と保存が完了しました！",
 
     "page.seedling.group.sam": "SAM3 検出",
     "page.seedling.label.prompt": "プロンプト:",
