--- a/src/gui/resource/i18n/zh_CN.json
+++ b/src/gui/resource/i18n/zh_CN.json
@@ -36,25 +36,27 @@
     "page.subplot.group.file": "文件",
     "page.subplot.btn.load_image": "加载影像",
     "page.subplot.btn.load_boundary": "加载边界SHP",
-    "page.subplot.group.def": "定义方式",
+    "page.subplot.group.layout": "布局规则",
     "page.subplot.combo.rc": "按行列数",
     "page.subplot.combo.size": "按尺寸(米)",
-    "page.subplot.group.param": "参数",
-    "page.subplot.label.cols": "列数/宽度:",
-    "page.subplot.label.rows": "行数/高度:",
+    "page.subplot.label.def_mode": "定义方式:",
+    "page.subplot.label.cols": "列数:",
+    "page.subplot.label.rows": "行数:",
+    "page.subplot.label.width_m": "宽度(m):",
+    "page.subplot.label.height_m": "高度(m):",
     "page.subplot.label.x_space": "X间距:",
     "page.subplot.label.y_space": "Y间距:",
-    "page.subplot.group.action": "操作",
+    "page.subplot.group.view": "视图",
     "page.subplot.check.preview": "实时预览",
     "page.subplot.btn.focus": "聚焦旋转",
-    "page.subplot.btn.generate": "生成保存",
+    "page.subplot.btn.reset": "重置",
+    "page.subplot.btn.save": "SHP保存",
 
     "page.subplot.dialog.load_image": "背景影像加载",
     "page.subplot.dialog.load_boundary": "边界SHP加载",
-    "page.subplot.dialog.save_shp": "小样地保存",
     "page.subplot.error.invalid_boundary": "边界文件格式错误！",
     "page.subplot.warning.no_boundary": "请先加载边界文件！",
-    "page.subplot.success.generated": "小样地生成和保存成功！",
+    "page.subplot.msg.success": "小样地生成和保存成功！",
 
     "page.seedling.group.sam": "SAM3 检测",
     "page.seedling.label.prompt": "提示词:",
