feat(seedling-ui): add SAM3 ribbon tab and weight-path settings

--- a/src/gui/resource/i18n/ja_JP.json
+++ b/src/gui/resource/i18n/ja_JP.json
@@ -64,7 +64,19 @@
     "page.subplot.msg.success": "サブプロット生成と保存が完了しました！",
 
     "page.seedling.group.sam": "SAM3 検出",
+    "page.seedling.group.office": "機能リボン",
+    "page.seedling.tab.file": "ファイル",
+    "page.seedling.tab.sam3": "SAM3",
+    "page.seedling.tab.points": "ポイント結果",
+    "page.seedling.btn.load_dom": "DOM選択",
+    "page.seedling.label.no_dom": "DOM未読み込み",
+    "page.seedling.dialog.load_dom": "DOM GeoTIFFを選択",
     "page.seedling.label.prompt": "プロンプト:",
+    "page.seedling.label.preview_size": "プレビューサイズ:",
+    "page.seedling.btn.pick_preview": "プレビュー範囲を選択",
+    "page.seedling.btn.preview_detect": "プレビュー推論",
+    "page.seedling.btn.save_cache": "中間結果を保存",
+    "page.seedling.btn.load_cache": "中間結果を読込",
     "page.seedling.btn.detect": "検出",
     "page.seedling.group.slice": "スライス",
     "page.seedling.label.size": "サイズ:",
@@ -76,6 +88,7 @@
     "page.seedling.btn.delete": "削除",
     "page.seedling.btn.undo": "元に戻す",
     "page.seedling.group.save": "保存",
+    "page.seedling.msg.weight_unavailable": "SAM3重みが利用できません。Metaで申請し設定から選択してください",
 
     "page.rename.group.ridge": "畝検出",
     "page.rename.label.direction": "方向:",
@@ -129,8 +142,10 @@
     "settings.lang.zh": "中国語",
     "settings.lang.ja": "日本語",
     "settings.label.model_dir": "モデルディレクトリ",
+    "settings.label.sam3_weight": "SAM3重みファイル",
     "settings.btn.browse": "参照",
     "settings.placeholder.no_dir": "ディレクトリが選択されていません",
+    "settings.placeholder.no_file": "ファイルが選択されていません",
     "settings.msg.restart_title": "再起動が必要",
     "settings.msg.restart": "変更を適用するにはアプリケーションを再起動してください",
 
