--- a/src/gui/resource/i18n/zh_CN.json
+++ b/src/gui/resource/i18n/zh_CN.json
@@ -64,7 +64,19 @@
     "page.subplot.msg.success": "小样地生成和保存成功！",
 
     "page.seedling.group.sam": "SAM3 检测",
+    "page.seedling.group.office": "功能区",
+    "page.seedling.tab.file": "文件",
+    "page.seedling.tab.sam3": "SAM3",
+    "page.seedling.tab.points": "点结果",
+    "page.seedling.btn.load_dom": "选择DOM",
+    "page.seedling.label.no_dom": "尚未加载DOM",
+    "page.seedling.dialog.load_dom": "选择DOM GeoTIFF",
     "page.seedling.label.prompt": "提示词:",
+    "page.seedling.label.preview_size": "预览框尺寸:",
+    "page.seedling.btn.pick_preview": "选择预览区",
+    "page.seedling.btn.preview_detect": "推理预览区",
+    "page.seedling.btn.save_cache": "保存中间结果",
+    "page.seedling.btn.load_cache": "读取中间结果",
     "page.seedling.btn.detect": "检测",
     "page.seedling.group.slice": "切片参数",
     "page.seedling.label.size": "大小:",
@@ -76,6 +88,7 @@
     "page.seedling.btn.delete": "删除",
     "page.seedling.btn.undo": "撤销",
     "page.seedling.group.save": "保存",
+    "page.seedling.msg.weight_unavailable": "SAM3权重不可用，请从Meta官方申请并在设置中选取",
 
     "page.rename.group.ridge": "垄检测",
     "page.rename.label.direction": "方向:",
@@ -129,8 +142,10 @@
     "settings.lang.zh": "中文",
     "settings.lang.ja": "日语",
     "settings.label.model_dir": "模型目录",
+    "settings.label.sam3_weight": "SAM3权重文件",
     "settings.btn.browse": "浏览",
     "settings.placeholder.no_dir": "未选择目录",
+    "settings.placeholder.no_file": "未选择文件",
     "settings.msg.restart_title": "需要重启",
     "settings.msg.restart": "请重启应用程序以应用更改",
 
