--- a/src/gui/resource/i18n/en_US.json
+++ b/src/gui/resource/i18n/en_US.json
@@ -64,7 +64,19 @@
     "page.subplot.msg.success": "Subplots generated and saved successfully!",
 
     "page.seedling.group.sam": "SAM3 Detection",
+    "page.seedling.group.office": "Ribbon",
+    "page.seedling.tab.file": "File",
+    "page.seedling.tab.sam3": "SAM3",
+    "page.seedling.tab.points": "Points",
+    "page.seedling.btn.load_dom": "Load DOM",
+    "page.seedling.label.no_dom": "No DOM loaded",
+    "page.seedling.dialog.load_dom": "Select DOM GeoTIFF",
     "page.seedling.label.prompt": "Prompt:",
+    "page.seedling.label.preview_size": "Preview Size:",
+    "page.seedling.btn.pick_preview": "Pick Preview",
+    "page.seedling.btn.preview_detect": "Run Preview",
+    "page.seedling.btn.save_cache": "Save Cache",
+    "page.seedling.btn.load_cache": "Load Cache",
     "page.seedling.btn.detect": "Detect",
     "page.seedling.group.slice": "Slice Params",
     "page.seedling.label.size": "Size:",
@@ -76,6 +88,7 @@
     "page.seedling.btn.delete": "Delete",
     "page.seedling.btn.undo": "Undo",
     "page.seedling.group.save": "Save",
+    "page.seedling.msg.weight_unavailable": "SAM3 weight unavailable. Apply from Meta and set it in Settings",
 
     "page.rename.group.ridge": "Ridge Detect",
     "page.rename.label.direction": "Direction:",
@@ -129,8 +142,10 @@
     "settings.lang.zh": "Chinese",
     "settings.lang.ja": "Japanese",
     "settings.label.model_dir": "Model Directory",
+    "settings.label.sam3_weight": "SAM3 Weight File",
     "settings.btn.browse": "Browse",
     "settings.placeholder.no_dir": "No directory selected",
+    "settings.placeholder.no_file": "No file selected",
     "settings.msg.restart_title": "Restart Required",
     "settings.msg.restart": "Please restart the application to apply changes",
 
