feat(seedling-ui): split SAM3 workflow into five pivot tabs

--- a/src/gui/resource/i18n/en_US.json
+++ b/src/gui/resource/i18n/en_US.json
@@ -67,6 +67,9 @@
     "page.seedling.group.office": "Ribbon",
     "page.seedling.tab.file": "File",
     "page.seedling.tab.sam3": "SAM3",
+    "page.seedling.tab.sam3_params": "SAM3 Params",
+    "page.seedling.tab.sam3_preview": "SAM3 Preview",
+    "page.seedling.tab.slice_infer": "Slice Inference",
     "page.seedling.tab.points": "Points",
     "page.seedling.btn.load_dom": "Load DOM",
     "page.seedling.label.no_dom": "No DOM loaded",
