--- a/src/gui/resource/i18n/ja_JP.json
+++ b/src/gui/resource/i18n/ja_JP.json
@@ -67,6 +67,9 @@
     "page.seedling.group.office": "機能リボン",
     "page.seedling.tab.file": "ファイル",
     "page.seedling.tab.sam3": "SAM3",
+    "page.seedling.tab.sam3_params": "SAM3パラメータ",
+    "page.seedling.tab.sam3_preview": "SAM3推論プレビュー",
+    "page.seedling.tab.slice_infer": "スライス推論",
     "page.seedling.tab.points": "ポイント結果",
     "page.seedling.btn.load_dom": "DOM選択",
     "page.seedling.label.no_dom": "DOM未読み込み",
