--- a/src/gui/resource/i18n/zh_CN.json
+++ b/src/gui/resource/i18n/zh_CN.json
@@ -67,6 +67,9 @@
     "page.seedling.group.office": "功能区",
     "page.seedling.tab.file": "文件",
     "page.seedling.tab.sam3": "SAM3",
+    "page.seedling.tab.sam3_params": "SAM3参数",
+    "page.seedling.tab.sam3_preview": "SAM3推理预览",
+    "page.seedling.tab.slice_infer": "切块推理",
     "page.seedling.tab.points": "点结果",
     "page.seedling.btn.load_dom": "选择DOM",
     "page.seedling.label.no_dom": "尚未加载DOM",
