--- a/src/gui/resource/i18n/ja_JP.json
+++ b/src/gui/resource/i18n/ja_JP.json
@@ -77,6 +77,7 @@
     "page.seedling.label.prompt": "プロンプト:",
     "page.seedling.label.preview_size": "プレビューサイズ:",
     "page.seedling.btn.pick_preview": "プレビュー範囲を選択",
+    "page.seedling.btn.pick_preview_stop": "選択終了",
     "page.seedling.btn.preview_detect": "プレビュー推論",
     "page.seedling.btn.save_cache": "中間結果を保存",
     "page.seedling.btn.load_cache": "中間結果を読込",
@@ -92,6 +93,7 @@
     "page.seedling.btn.undo": "元に戻す",
     "page.seedling.group.save": "保存",
     "page.seedling.msg.weight_unavailable": "SAM3重みが利用できません。Metaで申請し設定から選択してください",
+    "page.seedling.msg.preview_locked": "プレビュー範囲を固定しました",
 
     "page.rename.group.ridge": "畝検出",
     "page.rename.label.direction": "方向:",
