--- a/src/gui/resource/i18n/zh_CN.json
+++ b/src/gui/resource/i18n/zh_CN.json
@@ -77,6 +77,7 @@
     "page.seedling.label.prompt": "提示词:",
     "page.seedling.label.preview_size": "预览框尺寸:",
     "page.seedling.btn.pick_preview": "选择预览区",
+    "page.seedling.btn.pick_preview_stop": "结束选择",
     "page.seedling.btn.preview_detect": "推理预览区",
     "page.seedling.btn.save_cache": "保存中间结果",
     "page.seedling.btn.load_cache": "读取中间结果",
@@ -92,6 +93,7 @@
     "page.seedling.btn.undo": "撤销",
     "page.seedling.group.save": "保存",
     "page.seedling.msg.weight_unavailable": "SAM3权重不可用，请从Meta官方申请并在设置中选取",
+    "page.seedling.msg.preview_locked": "预览区已锁定",
 
     "page.rename.group.ridge": "垄检测",
     "page.rename.label.direction": "方向:",
