feat(seedling-preview): add SAM3 preview worker and polygon overlay

--- a/src/gui/resource/i18n/en_US.json
+++ b/src/gui/resource/i18n/en_US.json
@@ -78,7 +78,8 @@
     "page.seedling.label.preview_size": "Preview Size:",
     "page.seedling.btn.pick_preview": "Pick Preview",
     "page.seedling.btn.pick_preview_stop": "Stop Picking",
-    "page.seedling.btn.preview_detect": "Run Preview",
+    "page.seedling.btn.preview_detect": "Preview Inference",
+    "page.seedling.btn.stop_inference": "Stop Inference",
     "page.seedling.btn.save_cache": "Save Cache",
     "page.seedling.btn.load_cache": "Load Cache",
     "page.seedling.btn.detect": "Detect",
@@ -94,6 +95,12 @@
     "page.seedling.group.save": "Save",
     "page.seedling.msg.weight_unavailable": "SAM3 weight unavailable. Apply from Meta and set it in Settings",
     "page.seedling.msg.preview_locked": "Preview area locked",
+    "page.seedling.msg.pick_preview_first": "Pick a preview area on the map first",
+    "page.seedling.msg.preview_patch_failed": "Failed to read preview patch",
+    "page.seedling.msg.preview_running": "SAM3 preview inference is running",
+    "page.seedling.msg.preview_stopping": "Trying to stop inference",
+    "page.seedling.msg.preview_finished": "Preview inference finished",
+    "page.seedling.msg.preview_cancelled": "Preview inference cancelled",
 
     "page.rename.group.ridge": "Ridge Detect",
     "page.rename.label.direction": "Direction:",
