--- a/src/gui/resource/i18n/ja_JP.json
+++ b/src/gui/resource/i18n/ja_JP.json
@@ -79,6 +79,7 @@
     "page.seedling.btn.pick_preview": "プレビュー範囲を選択",
     "page.seedling.btn.pick_preview_stop": "選択終了",
     "page.seedling.btn.preview_detect": "プレビュー推論",
+    "page.seedling.btn.stop_inference": "推論停止",
     "page.seedling.btn.save_cache": "中間結果を保存",
     "page.seedling.btn.load_cache": "中間結果を読込",
     "page.seedling.btn.detect": "検出",
@@ -94,6 +95,12 @@
     "page.seedling.group.save": "保存",
     "page.seedling.msg.weight_unavailable": "SAM3重みが利用できません。Metaで申請し設定から選択してください",
     "page.seedling.msg.preview_locked": "プレビュー範囲を固定しました",
+    "page.seedling.msg.pick_preview_first": "先にマップ上でプレビュー範囲を選択してください",
+    "page.seedling.msg.preview_patch_failed": "プレビュー画像を読み取れませんでした",
+    "page.seedling.msg.preview_running": "SAM3プレビュー推論を実行中",
+    "page.seedling.msg.preview_stopping": "推論を停止しています",
+    "page.seedling.msg.preview_finished": "プレビュー推論が完了しました",
+    "page.seedling.msg.preview_cancelled": "プレビュー推論をキャンセルしました",
 
     "page.rename.group.ridge": "畝検出",
     "page.rename.label.direction": "方向:",
