--- a/src/gui/resource/i18n/zh_CN.json
+++ b/src/gui/resource/i18n/zh_CN.json
@@ -79,6 +79,7 @@
     "page.seedling.btn.pick_preview": "选择预览区",
     "page.seedling.btn.pick_preview_stop": "结束选择",
     "page.seedling.btn.preview_detect": "推理预览区",
+    "page.seedling.btn.stop_inference": "停止推理",
     "page.seedling.btn.save_cache": "保存中间结果",
     "page.seedling.btn.load_cache": "读取中间结果",
     "page.seedling.btn.detect": "检测",
@@ -94,6 +95,12 @@
     "page.seedling.group.save": "保存",
     "page.seedling.msg.weight_unavailable": "SAM3权重不可用，请从Meta官方申请并在设置中选取",
     "page.seedling.msg.preview_locked": "预览区已锁定",
+    "page.seedling.msg.pick_preview_first": "请先在地图上选定预览区",
+    "page.seedling.msg.preview_patch_failed": "无法读取预览区图像",
+    "page.seedling.msg.preview_running": "SAM3预览推理进行中",
+    "page.seedling.msg.preview_stopping": "正在尝试中断推理",
+    "page.seedling.msg.preview_finished": "预览推理完成",
+    "page.seedling.msg.preview_cancelled": "预览推理已取消",
 
     "page.rename.group.ridge": "垄检测",
     "page.rename.label.direction": "方向:",
