feat(ui): slice region preview

--- a/src/gui/resource/i18n/en_US.json
+++ b/src/gui/resource/i18n/en_US.json
@@ -69,7 +69,7 @@
     "page.seedling.tab.sam3": "SAM3",
     "page.seedling.tab.sam3_params": "SAM3 Params",
     "page.seedling.tab.sam3_preview": "SAM3 Preview",
-    "page.seedling.tab.slice_infer": "Slice Inference",
+    "page.seedling.tab.slice_infer": "SAM3 Slice Inference",
     "page.seedling.tab.points": "Points",
     "page.seedling.btn.load_dom": "Load DOM",
     "page.seedling.label.no_dom": "No DOM loaded",
@@ -80,9 +80,11 @@
     "page.seedling.btn.pick_preview_stop": "Stop Picking",
     "page.seedling.btn.preview_detect": "Preview Inference",
     "page.seedling.btn.stop_inference": "Stop Inference",
+    "page.seedling.btn.slice_preview": "Slice Preview",
+    "page.seedling.btn.slice_preview_stop": "Stop Slice Preview",
     "page.seedling.btn.save_cache": "Save Cache",
     "page.seedling.btn.load_cache": "Load Cache",
-    "page.seedling.btn.detect": "Detect",
+    "page.seedling.btn.start_inference": "Start Full Map Inference",
     "page.seedling.group.slice": "Slice Params",
     "page.seedling.label.size": "Size:",
     "page.seedling.label.overlap": "Overlap:",
