--- a/src/gui/resource/i18n/ja_JP.json
+++ b/src/gui/resource/i18n/ja_JP.json
@@ -68,21 +68,23 @@
     "page.seedling.tab.file": "ファイル",
     "page.seedling.tab.sam3": "SAM3",
     "page.seedling.tab.sam3_params": "SAM3パラメータ",
-    "page.seedling.tab.sam3_preview": "SAM3推論プレビュー",
-    "page.seedling.tab.slice_infer": "スライス推論",
+    "page.seedling.tab.sam3_preview": "SAM3推論を前覧",
+    "page.seedling.tab.slice_infer": "SAM3スライス推論",
     "page.seedling.tab.points": "ポイント結果",
     "page.seedling.btn.load_dom": "DOM選択",
     "page.seedling.label.no_dom": "DOM未読み込み",
     "page.seedling.dialog.load_dom": "DOM GeoTIFFを選択",
     "page.seedling.label.prompt": "プロンプト:",
-    "page.seedling.label.preview_size": "プレビューサイズ:",
-    "page.seedling.btn.pick_preview": "プレビュー範囲を選択",
-    "page.seedling.btn.pick_preview_stop": "選択終了",
-    "page.seedling.btn.preview_detect": "プレビュー推論",
-    "page.seedling.btn.stop_inference": "推論停止",
+    "page.seedling.label.preview_size": "前覧のサイズ:",
+    "page.seedling.btn.pick_preview": "前覧範囲を選択",
+    "page.seedling.btn.pick_preview_stop": "選択を終了",
+    "page.seedling.btn.preview_detect": "前覧を推論",
+    "page.seedling.btn.stop_inference": "推論を停止",
+    "page.seedling.btn.slice_preview": "分割推論を前覧",
+    "page.seedling.btn.slice_preview_stop": "分割推論の前覧を停止",
     "page.seedling.btn.save_cache": "中間結果を保存",
     "page.seedling.btn.load_cache": "中間結果を読込",
-    "page.seedling.btn.detect": "検出",
+    "page.seedling.btn.start_inference": "全图推論を開始",
     "page.seedling.group.slice": "スライス",
     "page.seedling.label.size": "サイズ:",
     "page.seedling.label.overlap": "オーバーラップ:",
@@ -94,12 +96,12 @@
     "page.seedling.btn.undo": "元に戻す",
     "page.seedling.group.save": "保存",
     "page.seedling.msg.weight_unavailable": "SAM3重みが利用できません。Metaで申請し設定から選択してください",
-    "page.seedling.msg.preview_locked": "プレビュー範囲を固定しました",
-    "page.seedling.msg.pick_preview_first": "先にマップ上でプレビュー範囲を選択してください",
-    "page.seedling.msg.preview_patch_failed": "プレビュー画像を読み取れませんでした",
-    "page.seedling.msg.preview_running": "SAM3プレビュー推論を実行中",
+    "page.seedling.msg.preview_locked": "前覧範囲を固定しました",
+    "page.seedling.msg.pick_preview_first": "先にマップ上で前覧範囲を選択してください",
+    "page.seedling.msg.preview_patch_failed": "前覧画像を読み取れませんでした",
+    "page.seedling.msg.preview_running": "SAM3前覧推論を実行中",
     "page.seedling.msg.preview_stopping": "推論を停止しています",
-    "page.seedling.msg.preview_finished": "プレビュー推論が完了しました",
+    "page.seedling.msg.preview_finished": "前覧推論が完了しました",
     "page.seedling.msg.preview_cancelled": "プレビュー推論をキャンセルしました",
 
     "page.rename.group.ridge": "畝検出",
