--- a/src/gui/resource/i18n/zh_CN.json
+++ b/src/gui/resource/i18n/zh_CN.json
@@ -69,7 +69,7 @@
     "page.seedling.tab.sam3": "SAM3",
     "page.seedling.tab.sam3_params": "SAM3参数",
     "page.seedling.tab.sam3_preview": "SAM3推理预览",
-    "page.seedling.tab.slice_infer": "切块推理",
+    "page.seedling.tab.slice_infer": "SAM3切块推理",
     "page.seedling.tab.points": "点结果",
     "page.seedling.btn.load_dom": "选择DOM",
     "page.seedling.label.no_dom": "尚未加载DOM",
@@ -80,9 +80,11 @@
     "page.seedling.btn.pick_preview_stop": "结束选择",
     "page.seedling.btn.preview_detect": "推理预览区",
     "page.seedling.btn.stop_inference": "停止推理",
+    "page.seedling.btn.slice_preview": "切块推理预览",
+    "page.seedling.btn.slice_preview_stop": "停止切块预览",
     "page.seedling.btn.save_cache": "保存中间结果",
     "page.seedling.btn.load_cache": "读取中间结果",
-    "page.seedling.btn.detect": "检测",
+    "page.seedling.btn.start_inference": "开始全图推理",
     "page.seedling.group.slice": "切片参数",
     "page.seedling.label.size": "大小:",
     "page.seedling.label.overlap": "重叠率:",
